feat: full GUI for minesweeper fix: Game.reveal in case last win was updating game state incorrectly fix: Board was checking mines count incorrectly fix: Difficulty.values was not present